# cumulus

./: .gitignore  Cargo.toml  README.md  deploy.sh  docker-compose.yml  usecase.md
backend/api/: .dockerignore  Cargo.toml  Dockerfile  diesel.toml
backend/api/src/: api.rs  constants.rs  lib.rs  main.rs  models.rs  processing.rs  schema.rs  utils.rs
backend/database/: README.md
backend/database/migrations/2026-01-18-051003-0000_init_tables/: down.sql  up.sql
cumulus-api-testing/: bruno.json  media.bru  testing.bru  thumbnail.bru
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/lib/: agGrid.ts  constants.ts  models.ts
frontend/src/lib/components/: Modal.svelte  Table.svelte  Thumbnail.svelte  Toast.svelte
frontend/src/lib/components/ui/: ButtonIcon.svelte  ButtonPrimary.svelte  ButtonSecondary.svelte  ButtonX.svelte  Darken.svelte
frontend/src/lib/widgets/: DeleteFileButton.svelte  FileTable.svelte  Sidebar.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
frontend/src/routes/files/: +page.server.ts  +page.svelte
frontend/src/routes/photos/: +page.server.ts  +page.svelte
frontend/src/routes/v1/media/[key]/: +server.ts
frontend/src/routes/v1/media/[key]/thumbnail/: +server.ts
