[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["multipart"] }
dotenv = "0.15.0"
opendal = { version = "0.55.0", features = ["services-s3"] }
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
