[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["multipart"] }
diesel = "2.3.5"
diesel-async = { version = "0.7.4", features = ["postgres"] }
dotenv = "0.15.0"
image = "0.25.9"
opendal = { version = "0.55.0", features = ["services-s3"] }
serde = "1.0.228"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
